# duckiebot-lab

./: .gitignore  LICENSE  MOTION.md  README.md  pyproject.toml  setup.py
examples/: example_bench_run.json  example_bench_run.txt
src/duckiebot_lab/experiments/: _sim.py  motor_emi.py
src/duckiebot_lab/motion/: __init__.py  _sim.py  demo.py  heading.py  primitives.py  verdict.py
tests/: test_motion_rotate.py  test_motor_emi.py
