[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "duckiebot-lab"
version = "0.4.0"
description = "Application layer for the pyhut Duckiebot: experiments, motion primitives, demos."
requires-python = ">=3.6"
license = { file = "LICENSE" }

# pyhut is the HAL dependency, one-way. It is not on PyPI, so reference the repo
# directly. For local development, `pip install -e ../pyhut` and this resolves as
# already-satisfied.
dependencies = [
    "pyhut @ git+https://github.com/jfjensen/pyhut.git",
]

[project.optional-dependencies]
# Off-robot only (plots for demos/experiments).
plot = ["matplotlib"]
# Test tooling.
test = ["pytest"]

[project.scripts]
duckiebot-emi = "duckiebot_lab.experiments.motor_emi:main"
duckiebot-rotate = "duckiebot_lab.motion.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
